--- a/kfax/Makefile.in
+++ b/kfax/Makefile.in
@@ -11,8 +11,8 @@ BINDIR  = $(prefix)/bin
 LIBDIR  = $(prefix)/lib
 TOOLDIR  = $(prefix)/share/toolbar
 MIMEDIR = $(prefix)/share/mimelnk/image/
-DOCSDIR = $(prefix)/share/doc/default/HTML/en/kfax
-APPSDIR = $(prefix)/applnk/Graphics
+DOCSDIR = $(prefix)/share/doc/HTML/default/kfax
+APPSDIR = $(prefix)/share/applnk/Graphics
 PICSDIR = $(prefix)/share/apps/kfax/pics/
 install = @INSTALL@
 INSTALL = $(install) -m 0755
