Makefiles now relocatable (and thus RPM-able)

--- a/kview/pics/Makefile.in
+++ b/kview/pics/Makefile.in
@@ -1,6 +1,8 @@
+prefix = @prefix@
+
 FILES =  diashow.xpm random.xpm resize.xpm
 
-PICSDIR = @prefix@/lib/pics/toolbar
+PICSDIR = $(prefix)/lib/pics/toolbar
 INSTALL_DIR = @INSTALL@ -d -m 0755
 INSTALL_DATA = @INSTALL@ -m 644
 
