--- a/kview/doc/Makefile.in
+++ b/kview/doc/Makefile.in
@@ -1,6 +1,8 @@
+prefix = @prefix@
+
 FILES =  index.html kview.gif toolbar1.xpm toolbar2.xpm
 
-DOCDIR = @prefix@/share/doc/HTML/en/kview
+DOCDIR = $(prefix)/share/doc/HTML/en/kview
 INSTALL_DIR = @INSTALL@ -d -m 0755
 INSTALL_DATA = @INSTALL@ -m 644
 
