--- a/kfract/Makefile.in
+++ b/kfract/Makefile.in
@@ -29,12 +29,11 @@ INSTALL_DIR = $(install) -d -m 0755
 INSTALL_DIR_PRIVATE = $(install) -d -m 0700
 
 prefix = @prefix@
-KDEINC = $(prefix)/include
-BINDIR = $(prefix)/bin
-SHAREDIR = $(prefix)/share
-LNKDIR = $(SHAREDIR)/applnk/Graphics
-ICONDIR = $(SHAREDIR)/icons
-DOCSDIR = $(SHAREDIR)/doc/HTML/en
+exec_prefix = @exec_prefix@
+BINDIR = @kde_bindir@
+LNKDIR = @kde_appsdir@/Graphics
+ICONDIR = @kde_icondir@
+DOCSDIR = @kde_htmldir@/en
 
 ########### File Formats ###########
 
