--- a/kpaint/Makefile.in
+++ b/kpaint/Makefile.in
@@ -115,5 +115,5 @@ realclean:  clean
 	-rm -f kpaint
 
 messages:
-	@XGETTEXT@ -C --keyword=translate -x ../../kdelibs/po/kde.po *.cpp
+	@XGETTEXT@ -C --keyword=translate -x ../../kdelibs/po/kde.pot *.cpp && mv messages.po ../po/kpaint.pot
 
