--- a/kpaint/Makefile.in
+++ b/kpaint/Makefile.in
@@ -40,6 +40,7 @@ OBJS=	main.o \
 	manager.o \
 	formats.o \
 	infodialog.o \
+	depthdialog.o \
 	palette.o \
 	palettedialog.o \
 	formatdialog.o \
@@ -62,6 +63,7 @@ METAS=	canvas.moc \
 	kpaint.moc \
 	manager.moc \
 	infodialog.moc \
+	depthdialog.moc \
 	properties.moc \
 	formatdialog.moc \
 	palette.moc \
