added exec_prefix. In case someone disables the path check, autoconf fills $(exec_prefix)/bin in @kde_bindir@ and this is dangerous, since exec_prefix was not set

--- a/kpaint/Makefile.in
+++ b/kpaint/Makefile.in
@@ -13,6 +13,7 @@ KDE_RPATH = @KDE_RPATH@
 #
 topdir	=	@topdir@
 prefix 	= 	@prefix@
+exec_prefix =   @exec_prefix@
 INCDIRS	=	@all_includes@ -I.. -I../kview
 LIBDIR	=	@all_libraries@ -L$(topdir)/kpaint/tools
 topdir  =       @topdir@
