KFract 0.1.3   25 February 1998 - [Robert Williams]  Added version.h - [Robert Williams]  renamed Fract.kdelnk to kfract.kdelnk - [Robert Williams]  added getHelpMenu() - [Robert Williams]  added -caption "%c" to kfract.kdelnk

--- a/kfract/Makefile.in
+++ b/kfract/Makefile.in
@@ -77,7 +77,7 @@ install: all
 	$(INSTALL_DATA) ./index.html $(DOCSDIR)/kfract
 	$(INSTALL_DATA) ./kfract.gif $(DOCSDIR)/kfract
 	$(INSTALL_DIR) $(LNKDIR)
-	$(INSTALL_DATA) ./Fractal.kdelnk $(LNKDIR)
+	$(INSTALL_DATA) ./kfract.kdelnk $(LNKDIR)
 	$(INSTALL_DIR) $(ICONDIR)
 	$(INSTALL_DATA) ./kfract.xpm $(ICONDIR)
 	$(INSTALL_DIR) $(MINIDIR)
@@ -86,7 +86,7 @@ install: all
 uninstall:
 	rm -f $(BINDIR)/$(TARGET)
 	rm -rf $(DOCSDIR)/kfract
-	rm -f $(LNKDIR)/Fractal.kdelnk
+	rm -f $(LNKDIR)/kfract.kdelnk
 	rm -f $(ICONDIR)/kfract.xpm
 	rm -f $(MINIDIR)/kfract.xpm
 
