--- a/po/zh/Makefile.am
+++ b/po/zh/Makefile.am
@@ -1,6 +1,6 @@
 
 # This has to be set. The rest should be reusable
-GMFILES = kpaint.gmo kghostview.gmo kdvi.gmo
+GMFILES = kpaint.gmo
 POFILES = $(GMFILES:.gmo=.po)
 
 LANG = zh
