moved some Makefiles to automake Taj: I tried to add a libpng test to configure. But I had to learn, that the png support in kview is broken. if you want to enable it again, just remove the three # in configure.in.1

--- a/kfract/Makefile.in
+++ b/kfract/Makefile.in
@@ -2,6 +2,7 @@
 
 kde_libraries = @kde_libraries@
 qt_libraries = @qt_libraries@
+x_libraries = @x_libraries@
 top_builddir = ..
 LIBTOOL = @LIBTOOL@
 KDE_RPATH = @KDE_RPATH@
