--- a/po/no/Makefile.am
+++ b/po/no/Makefile.am
@@ -1,6 +1,6 @@
 
 # This has to be set. The rest should be reusable
-GMFILES = kdvi.gmo
+GMFILES = kdvi.gmo kghostview.gmo
 POFILES = $(GMFILES:.gmo=.po)
 
 LANG = no
