--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,6 @@ Standards-Version: 2.1.2.2
 
 Package: kdegraphics
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, kdebase
 Description: KDE collection of graphics programs.
  This collections includes kfax kfract kghostview kpaint kview and kdvi
