I got this version from Martin Hartig:
New in kview 0.11.4:
o new MenuBar entry for
    - switching on/off Image Caching
    - selecting Image cache size
o  fixed: a memory leak
o  fixed: window initialization error
o  fixed: tooltip error
o  fixed: disabling error of 2 icons

--- a/kview/Makefile.am
+++ b/kview/Makefile.am
@@ -10,7 +10,7 @@ SUBDIRS = doc pics
 
 LDFLAGS= $(all_libraries) $(KDE_RPATH)
 
-LDADD = -lkfm -lkdeui -lkdecore -lqt -lX11 -lXext $(LIBJPEG) $(LIBSOCKET) $(LIBPNG)
+LDADD = -lkfm -lkdeui -lkdecore -lqt -lXext -lX11 $(LIBJPEG) $(LIBSOCKET) $(LIBPNG)
 
 DISTCLEANFILES = *.moc
 
