--- a/po/de/Makefile.am
+++ b/po/de/Makefile.am
@@ -1,6 +1,6 @@
 
 # This has to be set. The rest should be reusable
-GMFILES = kpaint.gmo kghostview.gmo kdvi.gmo
+GMFILES = kpaint.gmo kghostview.gmo kdvi.gmo kfax.gmo
 POFILES = $(GMFILES:.gmo=.po)
 
 LANG = de
