--- a/kpaint/Makefile.am
+++ b/kpaint/Makefile.am
@@ -37,7 +37,7 @@ uninstall-local:
 	-rm -f $(kde_minidir)/kpaint.xpm
 
 messages:
-	@XGETTEXT@ -C --keyword=translate -x ../../kdelibs/po/kde.pot *.cpp && mv messages.po ../po/kpaint.pot
+	@XGETTEXT@ -C -ktranslate -ki18n -x ../../kdelibs/po/kde.pot *.cpp && mv messages.po ../po/kpaint.pot
 
 canvas.cpp:canvas.moc
 canvas.moc: canvas.h
