--- a/kfract/Makefile.am
+++ b/kfract/Makefile.am
@@ -1,6 +1,6 @@
 
 INCLUDES = $(all_includes)
-LDFLAGS	= $(all_libraries)
+LDFLAGS	= $(all_libraries) $(KDE_RPATH)
 LDADD = -lkdeui -lkdecore  -lqt -lXext -lX11 $(LIBSOCKET)
 
 kfract_SOURCES = kfract.C kfractdlgs.C drawview.C fract.C \
