--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -1,5 +1,6 @@
 
-SUBDIRS = cs de nl ru sv it hu pl es pt fr hr fi zh_TW_Big5 sk el no zh_GB2312 mk
+SUBDIRS = cs de nl ru sv it hu pl es pt fr hr fi zh_TW_Big5 sk el \
+	no zh_GB2312 mk pt_BR
 
 APPS = kdvi kpaint kghostview
 
