--- a/kfax/Makefile.am
+++ b/kfax/Makefile.am
@@ -26,6 +26,8 @@ pics_DATA = kfax.tif kfaxlogo.xpm
 icondir = $(kde_icondir)
 icon_DATA = kfax.xpm
 
+EXTRA_DIST = $(apps_DATA) $(pics_DATA) $(icon_DATA) mini-kfax.xpm
+
 install-data-local: mini-kfax.xpm
 	$(mkinstalldirs) $(kde_minidir)
 	$(INSTALL_DATA)  mini-kfax.xpm $(kde_minidir)/kfax.xpm
