--- a/Makefile.cvs
+++ b/Makefile.cvs
@@ -3,50 +3,19 @@ all:
 	@echo "I will delete it before making the distribution"
 	@echo ""
 	cat acinclude.m4.in libtool.m4.in > acinclude.m4
-	cp configure.in.1 configure.in
 	aclocal 
 	autoheader
-	cat configure.in.1 > configure.in 
-	echo "AC_OUTPUT(" >> configure.in
-	mfs=`find . -name Makefile.am -print | sed -e "s#\.am##" | sed -e "s#\./##"` ; \
-	echo $$mfs")" >> configure.in ;\
 	automake
-	cat configure.in.1 configure.in.2 > configure.in
 	autoconf
-	touch -r configure.in.1 configure.in
-	touch configure
-	touch stamp-h.in
-	rm -f ./SUBDIRS 
-	files=`ls -1` ;\
-	dirs=`for i in $$files; do if test -d $$i; then echo $$i; fi; done` ;\
-	for i in $$dirs; do \
-	echo $$i >> ./SUBDIRS ;\
-	done
 
 dist:
-	@cp configure.in.1 configure.in ;\
-	cat acinclude.m4.in libtool.m4.in > acinclude.m4 ;\
+	@cat acinclude.m4.in libtool.m4.in > acinclude.m4 ;\
 	aclocal ;\
 	autoheader ;\
-	cat configure.in.1 > configure.in ;\
-	echo "AC_OUTPUT(" >> configure.in ;\
-	mfs=`find . -name Makefile.am -print | sed -e "s#\.am##" | sed -e "s#\./##"` ; \
-	echo $$mfs")" >> configure.in ;\
-	automake  --foreign --include-deps;\
-	cat configure.in.1 configure.in.2 > configure.in ;\
+	automake --foreign --include-deps ;\
 	autoconf ;\
-	touch -r configure.in.1 configure.in ;\
-	touch configure ;\
-	touch stamp-h.in ;\
-	rm -f ./SUBDIRS ;\
-	files=`ls -1` ;\
-	dirs=`for i in $$files; do if test -d $$i; then echo $$i; fi; done` ;\
-	for i in $$dirs; do \
-	echo $$i >> ./SUBDIRS ;\
-	done ;\
 	LIST=`find ./po -name "*.po"`; \
 	for i in $$LIST; do \
 	 file2=`echo $$i | sed -e "s#\.po#\.gmo#"`; \
 	 msgfmt -o $$file2 $$i || touch $$file2 ; \
-	done ;\
-	rm -f configure.in.1 configure.in.2 Makefile.cvs
+	done
