--- a/kfract/Makefile.am
+++ b/kfract/Makefile.am
@@ -8,6 +8,9 @@ kfract_SOURCES = kfract.C kfractdlgs.C drawview.C fract.C \
 DISTCLEANFILES = kfract.moc kfractdlgs.moc 
 bin_PROGRAMS   = kfract
 
+noinst_HEADERS = kfract.h kfractdlgs.h drawview.h fract.h julia.h lambda.h \
+				mandel.h version.h
+
 lnk_DATA = kfract.kdelnk
 lnkdir = $(kde_appsdir)/Graphics
 
@@ -16,6 +19,8 @@ icondir = $(kde_icondir)
 
 docs_DATA = index.html kfract.gif
 docsdir = $(kde_htmldir)/en/kfract
+
+EXTRA_DIST = $(lnk_DATA) $(icon_DATA) $(docs_DATA) mini-kfract.xpm
 
 install-data-local: 
 	$(mkinstalldirs) $(kde_minidir)
